@@ -14,51 +14,182 @@
 ############################################################################
 import bpy
 from bpy.types import Operator
+from bsmax.actions import set_as_active_object
 
 class Render_TO_Light_Lister(Operator):
 	bl_idname = 'render.light_lister'
 	bl_label = 'Light lister'
 	bl_options = {'REGISTER', 'INTERNAL'}
 	
-	lights = []
+	lights, materials = [], []
 
-	def get_field(self,row,light):
-		icon = 'LIGHT_' + light.data.type
-		row.operator('object.select_by_name', icon=icon, text=light.name).name = light.name
-		row.prop(light.data, 'color', text='')
-		row.prop(light.data, 'energy', text='')
-		row.prop(light.data, 'specular_factor', text='')
-		row.prop(light.data, 'shadow_soft_size', text='')
-		row.prop(light.data, 'use_custom_distance', text='')
-		row.prop(light.data, 'cutoff_distance', text='')
-		row.prop(light.data, 'use_shadow', text='')
-		row.prop(light.data, 'shadow_buffer_clip_start', text='')
-		row.prop(light.data, 'shadow_buffer_bias', text='')
-
-	def draw(self,ctx):
-		box = self.layout.box()
-		col = box.column()
-
+	def get_light_field(self, col, light):
+		data = light.data
 		row = col.row()
-		row.label(text='')
-		row.label(text='  Color')
-		row.label(text='  Energy')
-		row.label(text='       Specular')
-		row.label(text='')
-		row.label(text='Size')
-		row.label(text='Distance')
-		row.label(text='Shadow')
-		row.label(text='Start')
-		row.label(text='Bias')
+		""" Create Icone name from type name """
+		icon = 'LIGHT_' + data.type
+		row.operator('object.select_by_name',
+			icon=icon, text='').name = light.name
+		
+		row.prop(light, 'name', text='')
+		row.prop(data, 'type', text='')
+		row.prop(data, 'color', text='', icon='BLANK1')
+		row.prop(data, 'energy', text='')
 
-		for light in self.lights:
-			self.get_field(col.row(align=True), light)
+		if data.type == 'POINT':
+			row.prop(data, 'shadow_soft_size', text='')
+		elif data.type == 'SUN':
+			row.prop(data, 'angle', text='')
+		elif data.type == 'SPOT':
+			row.prop(data, 'shadow_soft_size', text='')
+		elif data.type == 'AREA':
+			# row.prop(data, 'shape', text='')
+			row.prop(data, 'size', text='')
+		
+		row.prop(data, 'use_shadow', text='', icon='COMMUNITY')
+		
+	def get_active_light_field(self, col, light):
+		data = light.data
+		row = col.row(align=True)
+		
+		icon = 'LIGHT_' + data.type
+		row.label(text=light.name, icon=icon)
+
+		if data.type == 'POINT':
+			row = col.row()
+			row.prop(data, 'use_custom_distance', text='Custom Distance')
+			if data.use_custom_distance:
+				row.prop(data, 'cutoff_distance', text='')
+				row.label(text='')
+				row.label(text='')
+			
+			row = col.row()
+			row.prop(data, 'use_shadow', text='Shadow')
+			if data.use_shadow:
+				row.prop(data, 'shadow_buffer_clip_start', text='Clip Start')
+				row.prop(data, 'shadow_buffer_bias', text='Bias')
+				row.label(text='')
+			
+				row = col.row()
+				row.prop(data, 'use_contact_shadow', text='Contact Shadow')
+				if data.use_contact_shadow:
+					row.prop(data, 'contact_shadow_distance', text='Distance')
+					row.prop(data, 'contact_shadow_bias', text='Bias')
+					row.prop(data, 'contact_shadow_thickness', text='Thickness')
+
+		if data.type == 'SUN':
+			row = col.row()
+			row.prop(data, 'use_shadow', text='Shadow')
+			if data.use_shadow:
+				row.prop(data, 'shadow_buffer_bias', text='Bias')
+				row.label(text='')
+				row.label(text='')
+			
+			row = col.row()
+			row.prop(data, 'shadow_cascade_count', text='Count')
+			row.prop(data, 'shadow_cascade_fade', text='Fade')
+			row.prop(data, 'shadow_cascade_max_distance', text='Max Distance')
+			row.prop(data, 'shadow_cascade_exponent', text='Distribution')
+			
+			row = col.row()
+			if data.use_shadow:
+				row.prop(data, 'use_contact_shadow', text='Contact Shadow')
+				if data.use_contact_shadow:
+					row.prop(data, 'contact_shadow_distance', text='Distance')
+					row.prop(data, 'contact_shadow_bias', text='Bias')
+					row.prop(data, 'contact_shadow_thickness', text='Thikness')
+
+		if data.type == 'SPOT':
+			row = col.row()
+			row.prop(data, 'use_custom_distance', text='Custom Distance')
+			if data.use_custom_distance:
+				row.prop(data, 'cutoff_distance', text='Distance')
+				row.label(text='')
+				row.label(text='')
+			
+			row = col.row()
+			row.prop(data, 'show_cone', text='Show Cone')
+			row.prop(data, 'spot_size', text='Size')
+			row.prop(data, 'spot_blend', text='Blend')
+			row.label(text='')
+
+			row = col.row()
+			row.prop(data, 'use_shadow', text='Shadow')
+			if data.use_shadow:
+				row.prop(data, 'shadow_buffer_clip_start', text='Clip Start')
+				row.prop(data, 'shadow_buffer_bias', text='Bias')
+				row.label(text='')
+			
+				row = col.row()
+				row.prop(data, 'use_contact_shadow', text='Contact Shadow')
+				if data.use_contact_shadow:
+					row.prop(data, 'contact_shadow_distance', text='Distance')
+					row.prop(data, 'contact_shadow_bias', text='Bias')
+					row.prop(data, 'contact_shadow_thickness', text='Thikness')
+
+		if data.type == 'AREA':
+			row = col.row()
+			row.prop(data, 'shape', text='')
+			if data.shape in {'SQUARE', 'DISK'}:
+				row.prop(data, 'size', text='Size')
+				row.label(text='')
+			if data.shape in {'RECTANGLE', 'ELLIPSE'}:
+				row.prop(data, 'size', text='Size X')
+				row.prop(data, 'size_y', text='Size')
+			row.label(text='')
+
+			row = col.row()
+			row.prop(data, 'use_custom_distance', text='Custom Distance')
+			if data.use_custom_distance:
+				row.prop(data, 'cutoff_distance', text='Distance')
+				row.label(text='')
+				row.label(text='')
+
+			row = col.row()
+			row.prop(data, 'use_shadow', text='Shadow')
+			if data.use_shadow:
+				row.prop(data, 'shadow_buffer_clip_start', text='Clip Start')
+				row.prop(data, 'shadow_buffer_bias', text='Bias')
+				row.label(text='')
+
+			row = col.row()
+			row.prop(data, 'use_contact_shadow', text='Contact Shadow')
+			if data.use_contact_shadow:
+				row.prop(data, 'contact_shadow_distance', text='Distance')
+				row.prop(data, 'contact_shadow_bias', text='Bias')
+				row.prop(data, 'contact_shadow_thickness', text='Thikness')
 	
-	def execute(self,ctx):
+	def get_material_field(self, col, material):
+		pass
+
+	def draw(self, ctx):
+		layout = self.layout
+		
+		""" Get Light Field """
+		box = layout.box()
+		col = box.column()
+		for light in self.lights:
+			self.get_light_field(col, light)
+		
+		""" Get Active light field """
+		box = layout.box()
+		col = box.column()
+		for light in self.lights:
+			if light == ctx.active_object:
+				self.get_active_light_field(col, light)
+				break
+		
+		""" Get Material Field """
+		box = layout.box()
+		col = box.column()
+		for material in self.materials:
+			self.get_material_field(col, material)
+	
+	def execute(self, ctx):
 		self.report({'OPERATOR'}, 'bpy.ops.render.light_lister()')
 		return{'FINISHED'}
 	
-	def cancel(self,ctx):
+	def cancel(self, ctx):
 		return None
 	
 	def get_lights(self):
@@ -74,9 +205,30 @@ class Render_TO_Light_Lister(Operator):
 					lights.append(light)
 		return lights
 
-	def invoke(self,ctx,event):
+	def invoke(self, ctx, event):
 		self.lights = self.get_lights() 
-		return ctx.window_manager.invoke_props_dialog(self, width=700)
+		return ctx.window_manager.invoke_props_dialog(self, width=500)
+
+
+
+class Camera_TO_Actve_By_Name(Operator):
+	""" Set as active camera  """
+	bl_idname = 'camera.active_by_name'
+	bl_label = 'Active Camera by name'
+	bl_options = {'REGISTER', 'UNDO', 'INTERNAL'}
+	
+	name: bpy.props.StringProperty(default='')
+	
+	@classmethod
+	def poll(self, ctx):
+		return ctx.mode == 'OBJECT'
+	
+	def execute(self,ctx):
+		bpy.ops.object.select_all(action='DESELECT')
+		if self.name != '':
+			set_as_active_object(ctx,bpy.data.objects[self.name])
+			bpy.ops.camera.set_active('INVOKE_DEFAULT')
+		return{'FINISHED'}
 
 
 
@@ -87,18 +239,26 @@ class Render_TO_Camera_Lister(Operator):
 	
 	lights = []
 
-	def get_field(self,row,camera):
-		row.operator('object.select_by_name', icon='CAMERA_DATA', text=camera.name).name = camera.name
+	def get_field(self, row, camera, active):
+		srow = row.row(align=True)
+		icon = 'OUTLINER_OB_CAMERA' if active else 'CAMERA_DATA'
+		srow.operator('camera.active_by_name', icon=icon,
+			text='').name = camera.name
+		srow.operator('object.select_by_name',
+			text=camera.name).name = camera.name
 		
 		srow = row.row(align=True)
+		srow.label(text='', icon='DRIVER_ROTATIONAL_DIFFERENCE')
 		srow.prop(camera.data, 'type', text='')
 		srow.prop(camera.data, 'lens', text='')
 
 		srow = row.row(align=True)
+		srow.label(text='', icon='CURVE_PATH')
 		srow.prop(camera.data, 'clip_start', text='')
 		srow.prop(camera.data, 'clip_end', text='')
 		
 		srow = row.row(align=True)
+		srow.label(text='', icon='ZOOM_SELECTED')
 		srow.prop(camera.data.dof, 'use_dof', text='')
 		srow.prop(camera.data.dof, 'focus_distance', text='')
 
@@ -109,20 +269,11 @@ class Render_TO_Camera_Lister(Operator):
 		box = self.layout.box()
 		col = box.column(align=True)
 
-		row = col.row()
-		row.label(text='Name')
-		row.label(text='Type')
-		row.label(text='Lens')
-		row.label(text='Clip Start')
-		row.label(text='Clip End')
-		row.label(text='FOV')
-		row.label(text='Size')
-
 		for cam in self.cameras:
-			self.get_field(col.row(align=False),cam)
+			is_active = (cam == ctx.scene.camera)
+			self.get_field(col.row(align=False), cam, is_active)
 	
 	def execute(self,ctx):
-		self.report({'OPERATOR'}, 'bpy.ops.render.camera_lister()')
 		return{'FINISHED'}
 	
 	def cancel(self,ctx):
@@ -150,10 +301,16 @@ class Render_TO_Camera_Lister(Operator):
 def render_menu(self, ctx):
 	layout = self.layout
 	layout.separator()
-	layout.operator('render.light_lister', text='Light Lister', icon='LIGHT_SUN')
-	layout.operator('render.camera_lister', text='Camera Lister', icon='CAMERA_DATA')
+	layout.operator('render.light_lister',
+		text='Light Lister', icon='LIGHT_SUN')
+	layout.operator('render.camera_lister',
+		text='Camera Lister', icon='CAMERA_DATA')
 
-classes = [Render_TO_Light_Lister, Render_TO_Camera_Lister]
+
+
+classes = [Render_TO_Light_Lister, 
+		Camera_TO_Actve_By_Name,
+		Render_TO_Camera_Lister]
 
 def register_light_lister():
 	[bpy.utils.register_class(c) for c in classes]
